--- a/css/student1.css
+++ b/css/student1.css
@@ -40,3 +40,47 @@ body{
     margin-bottom: 10px;
     text-align: center;
  }
+
+.gallery{
+   display: grid;
+   grid-template-columns: 250px 250px 250px;
+   border: 3px dashed black;
+   width: 90%;
+   margin: auto;
+   justify-content: center;
+}
+
+.gallery img{
+   width: 250px;
+   height: 100%;
+}
+
+.item1{
+   grid-row: 1 / 2;
+   grid-column: 1 / 2;
+}
+
+.item2{
+   grid-row: 1 / 2;
+   grid-column: 2 / 3;
+}
+.item3{
+   grid-row: 1 / 2;
+   grid-column: 3 / 4;
+}
+.item4{
+   grid-row: 2 / 3;
+   grid-column: 1 / 2;
+}
+.item5{
+   grid-row: 2 / 3;
+   grid-column: 2 / 3;
+}
+.item6{
+   grid-row: 2 / 3;
+   grid-column: 3 / 4;
+}
+.item7{
+   grid-row: 3 / 4;
+   grid-column: 1 / 4;
+}
